--- a/P5-WPF/BatchManagement_Window.xaml
+++ b/P5-WPF/BatchManagement_Window.xaml
@@ -19,7 +19,20 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Label>Sensor</Label>
-        <ComboBox Grid.Column="1" Margin="0,0,0,10" Name="BatchNr" />
+
+        <ComboBox  Margin="0,5,578,5" Name="SensorList" Grid.Column="1">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Fill="{Binding Name}" Width="16" Height="16" Margin="0,2,5,2" />
+                        <TextBlock Text="{Binding Path=SensorID}" />
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
+
+
         <Label Grid.Row="1">Nuværende Batch:</Label>
         <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,10" Name="Current_Batch" />
         <Label Grid.Row="2">Ny Batch:</Label>
