Batch connection with sensor implemented

--- a/P5-WPF/BatchManagement_Window.xaml
+++ b/P5-WPF/BatchManagement_Window.xaml
@@ -20,11 +20,11 @@
         </Grid.RowDefinitions>
         <Label>Sensor</Label>
 
-        <ComboBox  Margin="0,5,543,5" Name="SensorCB" Grid.Column="1">
+        <ComboBox SelectionChanged="SensorCB_SelectedIndexChanged"  Margin="0,5,543,5" x:Name="SensorCB" Grid.Column="1" >
         </ComboBox>
 
-        <!--<Label Grid.Row="1">Current Batch:</Label>
-        <Label x:Name="CurrentBatch" Content="{Binding ElementName=SensorCB, Path=SelectedItem}" Grid.Column="1" Margin="20,26,602,0" Grid.RowSpan="2"/>-->
+        <Label Grid.Row="1">Current Batch:</Label>
+        <Label x:Name="CurrentBatch" Grid.Column="1" Margin="20,26,602,0" Grid.RowSpan="2"/>
        
  <Label Grid.Row="2">New Batch:</Label>
         <TextBox Grid.Row="2" Grid.Column="1" Margin="0,0,0,10" Name ="New_Batch"/>
