--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -9,7 +9,7 @@
 
 
 
-    <Grid Margin="0,0,-8,-21">
+    <Grid Margin="0,-2,-8,-19">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="8*"/>
             <ColumnDefinition Width="3*"/>
@@ -37,7 +37,8 @@
             </ListView.View>
         </ListView>
 
-
+        <Label Background="{Binding dbConnectionColor}" Margin="188,404,16,22" Grid.Column="1"></Label>
+        <Label FontSize="7" Margin="114,396,23,0" Grid.Column="1" Height="18" VerticalAlignment="Top" Content="DB Connection Status"/>
         <Label FontSize="20" FontWeight="Bold" Background="GhostWhite" Margin="282,19,62,380" Name="activetext">
             Batches in production
         </Label>
