--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -8,14 +8,28 @@
         Title="Novefa Observeringssystem" Height="450" Width="800">
 
 
-
-    <Grid Margin="0,-2,-8,-19">
+    <Grid Margin="0,0,-8,-21">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="8*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
 
-        <ListView ItemsSource="{Binding activeBatches}" x:Name="batcheslist"  Margin="120,93,91,70" Grid.ColumnSpan="2" MouseDoubleClick="batchesList_MouseDoubleClick" >
+
+        <Border Grid.Row="0" Background="Red" Grid.ColumnSpan="2" Margin="0,0,10,392">
+            <TextBlock Text="Header"/>
+        </Border>
+
+
+        <!-- Body -->
+        <ContentPresenter Grid.ColumnSpan="2" Margin="0,67,10,118"/>
+
+        <!-- Footer -->
+        <Border Background="grey" Grid.ColumnSpan="2" Margin="0,366,10,18">
+            <TextBlock Text="Footer" Margin="10,429,-207,-97"/>
+        </Border>
+
+
+        <ListView ItemsSource="{Binding activeBatches}" x:Name="batcheslist"  Margin="201,76,10,87" Grid.ColumnSpan="2" MouseDoubleClick="batchesList_MouseDoubleClick" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=BatchID}" Header="Batch ID" Width="70"/>
@@ -37,9 +51,9 @@
             </ListView.View>
         </ListView>
 
-        <Label Background="{Binding dbConnectionColor}" Margin="188,404,16,22" Grid.Column="1"></Label>
-        <Label FontSize="7" Margin="114,396,23,0" Grid.Column="1" Height="18" VerticalAlignment="Top" Content="DB Connection Status"/>
-        <Label FontSize="20" FontWeight="Bold" Background="GhostWhite" Margin="282,19,62,380" Name="activetext">
+        <Label Background="{Binding dbConnectionColor}" Margin="184,395,19,31" Grid.Column="1" RenderTransformOrigin="-14.354,7.208"></Label>
+        <Label FontSize="7" Margin="97,382,40,0" Height="18" VerticalAlignment="Top" Content="DB Connection Status" Grid.Column="1"/>
+        <Label FontSize="20" FontWeight="Bold" Background="GhostWhite" Margin="282,7,62,392" Name="activetext">
             Batches in production
         </Label>
 
@@ -47,22 +61,22 @@
             Archived Batches
         </Label>
 
-        <Button Click="RefreshTable" HorizontalAlignment="Center"  FontWeight="Bold" Margin="256,377,175,26" Width="152"  Name="refreshTable_button">
+        <Button Click="RefreshTable" HorizontalAlignment="Center"  FontWeight="Bold" Margin="0,225,431,178" Width="152"  Name="refreshTable_button">
             <WrapPanel>
                 <TextBlock>Refresh table</TextBlock>
             </WrapPanel>
         </Button>
 
-        <Button Click="Batch_Click" HorizontalAlignment="Center"  FontWeight="Bold" Margin="71,377,360,26" Width="152"  Name="Batch_click_button">
+        <Button Click="Batch_Click" HorizontalAlignment="Center"  FontWeight="Bold" Margin="10,171,421,232" Width="152"  Name="Batch_click_button">
             <WrapPanel>
                 <TextBlock>Batch mangement</TextBlock>
             </WrapPanel>
         </Button>
 
-        <Image Source="/Images/Novefa_Logo.PNG" Margin="10,-58,374,324" />
-        <Label Margin="427,377,10,31">Time of last refresh :</Label>
-        <TextBlock x:Name="TimerDisplay" Margin="543,382,49,33" Grid.ColumnSpan="2"></TextBlock>
-        <Button Click="NotVisible_Click" HorizontalAlignment="Center" FontWeight="Bold" Margin="10,24,37,380" Width="172" Name="archive_button" Grid.Column="1">
+        <Image Source="/Images/Novefa_Logo.PNG" Margin="10,-61,374,327" />
+        <Label Margin="0,377,437,31">Time of last refresh :</Label>
+        <TextBlock x:Name="TimerDisplay" Margin="120,377,253,38"/>
+        <Button Click="NotVisible_Click" HorizontalAlignment="Center" FontWeight="Bold" Margin="0,115,411,289" Width="172" Name="archive_button">
             <WrapPanel>
                 <TextBlock><Run Text="Show archived batches"/></TextBlock>
             </WrapPanel>
