--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -8,30 +8,29 @@
         Title="Novefa Observeringssystem" Height="450" Width="800">
 
 
-    <Grid Margin="0,0,-8,-21">
+    <Grid Margin="0,0,-8,-29">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="8*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
 
         <!-- HEADER-->
-        <Border Grid.Row="0" Background="Gainsboro" Grid.ColumnSpan="2" Margin="0,0,0,366">
-        </Border>
-        <Label FontSize="20" FontWeight="Bold" Background="Gainsboro" Margin="297,10,47,389" Name="activetext">
+        <Border Grid.Row="0" Background="Gainsboro" Margin="0,0,0,374"/>
+        <Label FontSize="20" FontWeight="Bold" Background="Gainsboro" Margin="311,10,257,389" Name="activetext">
             Batches in production
         </Label>
         <Label FontSize="20" FontWeight="Bold" Background="Gainsboro" Margin="297,10,47,389" Name="archivetext" Visibility="Hidden">
             Archived Batches
         </Label>
-        <Image Source="/Images/Novefa_Logo.PNG" Margin="0,-51,384,317" />
-        
-        
+        <Image Source="/Images/Novefa_Logo.PNG" Margin="0,-27,582,332" />
+
+
 
 
         <!-- BODY -->
-        <ContentPresenter Grid.ColumnSpan="2" Margin="0,67,10,84"/>
-        
-        <ListView ItemsSource="{Binding activeBatches}" x:Name="batcheslist"  Margin="225,67,-24,70" Grid.ColumnSpan="2" MouseDoubleClick="batchesList_MouseDoubleClick" >
+        <ContentPresenter Margin="0,67,0,84"/>
+
+        <ListView ItemsSource="{Binding activeBatches}" x:Name="batcheslist"  Margin="225,67,-24,84" Grid.ColumnSpan="2" MouseDoubleClick="batchesList_MouseDoubleClick" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=BatchID}" Header="Batch ID" Width="70"/>
@@ -42,7 +41,7 @@
             </ListView.View>
         </ListView>
 
-        <ListView ItemsSource="{Binding archivedBatches}" x:Name="archivedbatcheslist"  Margin="225,67,-24,70" Grid.ColumnSpan="2" MouseDoubleClick="archivedbatchesList_MouseDoubleClick" Visibility="Hidden" >
+        <ListView ItemsSource="{Binding archivedBatches}" x:Name="archivedbatcheslist"  Margin="225,67,-24,74" Grid.ColumnSpan="2" MouseDoubleClick="archivedbatchesList_MouseDoubleClick" Visibility="Hidden" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=BatchID}" Header="Batch ID" Width="70"/>
@@ -52,38 +51,42 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        
-        <Label Background="{Binding dbConnectionColor}" Margin="184,395,19,31" Grid.Column="1" RenderTransformOrigin="-14.354,7.208"></Label>
-        <Label FontSize="7" Margin="97,382,40,0" Height="18" VerticalAlignment="Top" Content="DB Connection Status" Grid.Column="1"/>
-        <Button Click="RefreshTable" HorizontalAlignment="Center"  FontWeight="Bold" Margin="20,224,411,179" Width="152"  Name="refreshTable_button">
-            <WrapPanel>
-                <TextBlock>Refresh table</TextBlock>
-            </WrapPanel>
+
+
+        <Button Click="RefreshTable" HorizontalAlignment="Left"  FontWeight="Bold" Margin="673,37,0,383" Width="105"  Name="refreshTable_button">
+           
+            <DockPanel>
+                <Image Source="/Images/refresh-64x64.png"  />
+                <WrapPanel>
+                    <TextBlock>Refresh table</TextBlock>
+                </WrapPanel>
+                
+            </DockPanel>
         </Button>
 
-        <Button Click="Batch_Click" HorizontalAlignment="Center"  FontWeight="Bold" Margin="20,171,411,232" Width="152"  Name="Batch_click_button">
+        <Button Click="Batch_Click" HorizontalAlignment="Left"  FontWeight="Bold" Margin="20,181,0,213" Width="149"  Name="Batch_click_button">
             <WrapPanel>
                 <TextBlock>Batch management</TextBlock>
             </WrapPanel>
         </Button>
-        <Button Click="NotVisible_Click" HorizontalAlignment="Center" FontWeight="Bold" Margin="20,115,411,289" Width="152" Name="archive_button">
+        <Button Click="NotVisible_Click" HorizontalAlignment="Left" FontWeight="Bold"  Width="149" Name="archive_button" Margin="20,100,0,289">
             <WrapPanel>
                 <TextBlock><Run Text="Show archived batches"/></TextBlock>
             </WrapPanel>
         </Button>
-        <Button HorizontalAlignment="Center" Visibility="Hidden" FontWeight="Bold" Margin="20,115,411,289" Width="152" Click="Visible_Click" Name="active_button" Grid.Column="1">
+        <Button HorizontalAlignment="Left" Visibility="Hidden" FontWeight="Bold" Margin="20,100,0,289" Width="149" Click="Visible_Click" Name="active_button">
             <WrapPanel>
                 <TextBlock><Run Text="Show active Batches"/></TextBlock>
             </WrapPanel>
         </Button>
-        
+
         <!-- FOOTER -->
-        <Border Background="Gainsboro" Grid.ColumnSpan="2" Margin="0,358,0,18">
-        </Border>
-        <Label Margin="0,377,437,31">Time of last refresh :</Label>
-        <TextBlock x:Name="TimerDisplay" Margin="120,377,253,38"/>
-        
-        
+        <Border Background="Gainsboro" Margin="0,358,0,10"/>
+        <Label FontWeight ="bold" Margin="0,363,354,45">Time of last refresh :</Label>
+        <TextBlock FontWeight="Bold" x:Name="TimerDisplay" Margin="124,368,577,49" RenderTransformOrigin="0.495,0.444"/>
+        <Label Background="{Binding dbConnectionColor}" Margin="136,390,643,37"  RenderTransformOrigin="-14.354,7.208"></Label>
+        <Label FontWeight="Bold" Margin="0,383,643,0" Height="30" VerticalAlignment="Top" Content="DB Connection status" />
+
 
     </Grid>
 
