Settings button added

--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -9,6 +9,24 @@
 
 
     <Grid Margin="0,0,-8,-29">
+        <Grid.Resources>
+
+            <Style x:Key="alternatingListViewItemStyle" TargetType="{x:Type ListViewItem}">
+                <Style.Triggers>
+                    <!-- setting up triggers for alternate background colors -->
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                        <Setter Property="Background" Value="Gainsboro"></Setter>
+                    </Trigger>
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="2">
+                        <Setter Property="Background" Value="White"></Setter>
+                    </Trigger>
+                </Style.Triggers>
+                <!-- setting row height here -->
+                <Setter Property="Height" Value="30" />
+            </Style>
+
+        </Grid.Resources>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="0*"/>
@@ -22,53 +40,66 @@
         <Label FontSize="20" FontWeight="Bold" Background="Gainsboro" Margin="297,10,47,389" Name="archivetext" Visibility="Hidden">
             Archived Batches
         </Label>
-        <Image Source="/Images/Novefa_Logo.PNG" Margin="0,-27,582,332" />
-
-
-
-
-        <!-- BODY -->
-        <ContentPresenter Margin="0,67,0,84"/>
-
-        <ListView ItemsSource="{Binding activeBatches}" x:Name="batcheslist"  Margin="225,67,-24,84" Grid.ColumnSpan="2" MouseDoubleClick="batchesList_MouseDoubleClick" >
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=BatchID}" Header="Batch ID" Width="70"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Temperatur_Celsius}" Header="Current temperature (in Celsius)" Width="180"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Luftfugtighed_Procent}" Header="Current humidity (in %)" Width="160"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Tidspunkt}" Header="Timestamp" Width="140"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
-
-        <ListView ItemsSource="{Binding archivedBatches}" x:Name="archivedbatcheslist"  Margin="225,67,-24,74" Grid.ColumnSpan="2" MouseDoubleClick="archivedbatchesList_MouseDoubleClick" Visibility="Hidden" >
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=BatchID}" Header="Batch ID" Width="70"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Temperatur_Celsius}" Header="Current temperature (in Celsius)" Width="180"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Luftfugtighed_Procent}" Header="Current humidity (in %)" Width="160"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Tidspunkt}" Header="Timestamp" Width="140"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
-
-
+        <Image Source="/Images/Novefa_Logo.PNG" Margin="0,-33,582,338" />
+        
+        <Button Click="Batch_Click" HorizontalAlignment="Left"  FontWeight="Bold" Margin="673,6,0,414" Width="105"  Name="Settings">
+            <DockPanel>
+                <Image Source="/Images/gear.png" Margin=" 0,0,30,0"  />
+                <WrapPanel>
+                    <TextBlock RenderTransformOrigin="0.478,0.938" Width="50" Height="20"><Run Text="Settings"/></TextBlock>
+                </WrapPanel>
+            </DockPanel>
+        </Button>
+        
         <Button Click="RefreshTable" HorizontalAlignment="Left"  FontWeight="Bold" Margin="673,37,0,383" Width="105"  Name="refreshTable_button">
-           
+
             <DockPanel>
                 <Image Source="/Images/refresh-64x64.png"  />
                 <WrapPanel>
                     <TextBlock>Refresh table</TextBlock>
                 </WrapPanel>
-                
+
             </DockPanel>
         </Button>
+
+
+        <!-- BODY -->
+        <ContentPresenter Margin="0,67,0,84"/>
+
+        <ListView ItemsSource="{Binding activeBatches}" x:Name="batcheslist"  Margin="225,67,-24,84" Grid.ColumnSpan="2" MouseDoubleClick="batchesList_MouseDoubleClick" ItemContainerStyle="{StaticResource alternatingListViewItemStyle}" AlternationCount="2">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=BatchID}" Header="Batch ID" Width="70"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Temperatur_Celsius}" Header="Current temperature (in Celsius)" Width="180"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Luftfugtighed_Procent}" Header="Current humidity (in %)" Width="160"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Tidspunkt}" Header="Timestamp" Width="140"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
+
+        <ListView ItemsSource="{Binding archivedBatches}" x:Name="archivedbatcheslist"  Margin="225,67,-24,84" Grid.ColumnSpan="2" MouseDoubleClick="archivedbatchesList_MouseDoubleClick" Visibility="Hidden" ItemContainerStyle="{StaticResource alternatingListViewItemStyle}" AlternationCount="2" >
+            <ListView.View>
+
+                <GridView>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=BatchID}" Header="Batch ID" Width="70"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Temperatur_Celsius}" Header="Current temperature (in Celsius)" Width="180"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Luftfugtighed_Procent}" Header="Current humidity (in %)" Width="160"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=Tidspunkt}" Header="Timestamp" Width="140"/>
+
+                </GridView>
+
+            </ListView.View>
+        </ListView>
+
+
+        
 
         <Button Click="Batch_Click" HorizontalAlignment="Left"  FontWeight="Bold" Margin="20,181,0,213" Width="149"  Name="Batch_click_button">
             <WrapPanel>
                 <TextBlock>Batch management</TextBlock>
             </WrapPanel>
         </Button>
+        
         <Button Click="NotVisible_Click" HorizontalAlignment="Left" FontWeight="Bold"  Width="149" Name="archive_button" Margin="20,100,0,289">
             <WrapPanel>
                 <TextBlock><Run Text="Show archived batches"/></TextBlock>
@@ -79,6 +110,8 @@
                 <TextBlock><Run Text="Show active Batches"/></TextBlock>
             </WrapPanel>
         </Button>
+
+
 
         <!-- FOOTER -->
         <Border Background="Gainsboro" Margin="0,358,0,10"/>
