--- a/P5-WPF/BatchManagement_Window.xaml
+++ b/P5-WPF/BatchManagement_Window.xaml
@@ -5,15 +5,32 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:P5_WPF"
         mc:Ignorable="d"
-        Title="Batch Management" Height="504.457" Width="261.603">
+        Title="Batch Management" Height="376.214" Width="200.408">
     <Grid Margin="0,0,2,2">
+        <Grid.Resources>
+
+            <Style x:Key="alternatingListViewItemStyle" TargetType="{x:Type ListViewItem}">
+                <Style.Triggers>
+                    <!-- setting up triggers for alternate background colors -->
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                        <Setter Property="Background" Value="Gainsboro"></Setter>
+                    </Trigger>
+                    <Trigger Property="ItemsControl.AlternationIndex" Value="2">
+                        <Setter Property="Background" Value="White"></Setter>
+                    </Trigger>
+                </Style.Triggers>
+                <!-- setting row height here -->
+                <Setter Property="Height" Value="30" />
+            </Style>
+        </Grid.Resources>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="135.793"/>
-            <ColumnDefinition Width="253*" />
-            <ColumnDefinition Width="52*"/>
-            <ColumnDefinition Width="21*"/>
-            <ColumnDefinition Width="49*"/>
+            <ColumnDefinition Width="174"/>
+            <ColumnDefinition />
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -22,30 +39,22 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Label Grid.ColumnSpan="2">Sensor</Label>
+        <Label Grid.ColumnSpan="2" Margin="0,0,81,0">Sensor</Label>
 
-        <ComboBox SelectionChanged="SensorCB_SelectedIndexChanged"  Margin="86,5,60,5" x:Name="SensorCB" Grid.Column="1" Grid.ColumnSpan="2" >
-        </ComboBox>
+        <ComboBox SelectionChanged="SensorCB_SelectedIndexChanged"  Margin="50,5,0,5" x:Name="SensorCB" Grid.Column="1" />
 
         <Label Grid.Row="1" Grid.ColumnSpan="2" Margin="0,0,37,0">Current Batch:</Label>
-        <Label x:Name="CurrentBatch" Grid.Column="1" Margin="98,1,0,23" Grid.RowSpan="2" Grid.Row="1"/>
+        <Label x:Name="CurrentBatch" Grid.Column="1" Margin="98,0,0,24" Grid.RowSpan="2" Grid.Row="1"/>
 
         <Label Grid.Row="2" Grid.ColumnSpan="2">New Batch:</Label>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="72,5,60,5" Name ="New_Batch" PreviewTextInput="INTonly" Grid.ColumnSpan="2"/>
-        <Button Click ="addToDB" Grid.Row="3" Grid.Column="0" Margin="0,0,35,159" Grid.ColumnSpan="3">
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="72,5,21,5" Name ="New_Batch" PreviewTextInput="INTonly"/>
+        <Button Click ="addToDB" Grid.Row="3" Grid.Column="0" Margin="10,0,0,43" Grid.ColumnSpan="2">
             <WrapPanel>
-                <TextBlock Width="193"><Run Text="Connect new batch to sensor"/></TextBlock>
+                <TextBlock Width="89"><Run Text="Insert new Batch"/></TextBlock>
             </WrapPanel>
         </Button>
-        <ListView ItemsSource="{Binding sensors}" x:Name="sensorslist"  Margin="7,44,24,26" Grid.Row="3" Grid.ColumnSpan="2" Grid.RowSpan="2" Grid.Column="1" RenderTransformOrigin="0.5,0.5" >
-            <ListView.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform AngleY="-0.646"/>
-                    <RotateTransform/>
-                    <TranslateTransform Y="-0.739"/>
-                </TransformGroup>
-            </ListView.RenderTransform>
+        <ListView ItemsSource="{Binding sensors}" x:Name="sensorslist"  Margin="10,30,0,10" Grid.Row="3" Grid.Column="1" RenderTransformOrigin="0.5,0.5" ItemContainerStyle="{StaticResource alternatingListViewItemStyle}" AlternationCount="2" Grid.RowSpan="2" >
+
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=ID}" Header="Sensor ID" Width="70"/>
