--- a/P5-WPF/Settings_Window.xaml
+++ b/P5-WPF/Settings_Window.xaml
@@ -5,36 +5,36 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:P5_WPF"
         mc:Ignorable="d"
-        Title="Application Settings" Height="450" Width="800">
+        Title="Application Settings" Height="354.337" Width="537.5">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="135.793"/>
-            <ColumnDefinition Width="253*" />
-            <ColumnDefinition Width="52*"/>
-            <ColumnDefinition Width="21*"/>
-            <ColumnDefinition Width="49*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="136"/>
+
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Label Grid.ColumnSpan="2" Content=""/>
-        <TextBox Grid.Column="2" Margin="12,1,362,25" Grid.Row="1" Grid.RowSpan="2"/>
+        <TextBox Grid.Column="1" Margin="12,1,124,25" Grid.Row="1" Grid.RowSpan="2"/>
 
-        <Label FontWeight="Bold" Background="CadetBlue" Foreground="White" FontSize="15" Grid.ColumnSpan="2" Margin="0,0,37,0" Content="General Humidity limit value for warning:"/>
+        <Border Background="Gainsboro" Margin="-10,0,10,2" Grid.RowSpan="3" />
+        <Label FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Black" Background="Gainsboro" FontSize="25" Content="Settings" Grid.RowSpan="2" Margin="219,10,258,1" />
+
+        <Label FontWeight="Bold" Background="CadetBlue" Foreground="White" FontSize="15" Grid.ColumnSpan="2" Margin="0,56,37,155" Content="General Humidity limit value for warning:" Grid.Row="3"/>
         <Label x:Name="CurrentHumidityRange" Margin="233,0,312,24" Grid.RowSpan="2" Grid.Row="1"/>
 
-        <Label FontWeight="Bold" Foreground="White" Background="Red" FontSize="15" Grid.Row="2" Grid.ColumnSpan="2" Margin="0,3,0,19" Grid.RowSpan="2" Content="General temperature limit value for warning:"></Label>
+        <Label FontWeight="Bold" Foreground="Black" Background="Gainsboro" FontSize="15" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,98,10,113" Content="General temperature limit value for warning:"/>
 
-        <Button Click="HumValue_Click" HorizontalAlignment="Center"  FontWeight="Bold" Width="145"  Name="TempValue_click_button" Grid.RowSpan="2" Margin="355,0,83,0">
+        <Button Click="HumValue_Click" HorizontalAlignment="Center"  FontWeight="Bold"  Width="159"  Name="TempValue_click_button"  Margin="361,56,63,155" Grid.Row="3">
             <TextBlock><Run Text="Change humidity Value"/></TextBlock>
         </Button>
 
-        <Button Click ="TempValue_Click" HorizontalAlignment="Center"  FontWeight="Bold" Width="159"  Name="HumValue_click_button" Margin="355,3,69,10" Grid.Row="2">
+        <Button Click ="TempValue_Click" HorizontalAlignment="Center"  FontWeight="Bold" Width="159"  Name="HumValue_click_button" Margin="361,98,63,113" Grid.Row="3">
             <TextBlock><Run Text="Change temperature Value"/></TextBlock>
         </Button>
 
