--- a/P5-WPF/BatchManagement_Window.xaml
+++ b/P5-WPF/BatchManagement_Window.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="P5_WPF.BatchManagement_Window"
+﻿<Window  ResizeMode="NoResize" x:Class="P5_WPF.BatchManagement_Window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
